--- a/src/index.css
+++ b/src/index.css
@@ -83,3 +83,6 @@
   background: linear-gradient(#1e3c72,#2a5298);
   font-family: 'Roboto', sans-serif;
 }
+.card{
+  background: linear-gradient(#457fca,#5691c8);;
+}
